# property-based-testing-stateful-systems-tutorial

./: LICENSE  README.md  cabal.project  cabal.project.freeze  property-based-testing-stateful-systems-tutorial.cabal  shell.nix
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ci.yaml  release.yaml
app/: Main.hs
docs/: Part01SMTesting.md  Part02ConcurrentSMTesting.md  Part03SMContractTesting.md  Part04FaultInjection.md
images/: part5-real-event-loop.excalidraw  part5-simulation-event-loop.excalidraw
src/: Part01SMTesting.lhs  Part02ConcurrentSMTesting.lhs  Part03SMContractTesting.lhs  Part04FaultInjection.lhs
src/Part03/: Queue.hs  QueueInterface.hs  QueueTest.hs  Service.hs  ServiceTest.hs
src/Part04/: CRC32.hs  FSFI.hs  LineariseWithFault.hs
tools/: generate_changelog.hs  generate_markdown.sh
